# fty-service-status-systemd

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  doxygen.conf
example/: CMakeLists.txt  example.service
example/src/: example.cpp
include/: systemd.h
packaging/debian/: changelog  control  copyright
src/: systemd.cpp
